fix: WORK horizontal scroll

--- a/src/components/Home/HomeSections/Projects/Carousel/Carousel.styles.scss
+++ b/src/components/Home/HomeSections/Projects/Carousel/Carousel.styles.scss
@@ -52,6 +52,7 @@
   text-overflow: ellipsis;
   overflow: hidden;
   width: 100%;
+  display: block;
   white-space: nowrap;
   font-weight: 100;
   font-size: 16px;
